# imagetool

./: .gitignore  CMakeLists.txt  README.md
source/: Atlas.cpp.template  Atlas.h.template  CMakeLists.txt  ImageTool.cpp  ImageTool.h  MaxRectsBinPack.cpp  MaxRectsBinPack.h  PackingUtil.cpp  PackingUtil.h  Rect.cpp  Rect.h  main.cpp
